--- a/.github/workflows/run_python_script.yml
+++ b/.github/workflows/run_python_script.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -26,8 +28,12 @@ jobs:
 
       - name: Commit file
         run: |
-          git config --global user.name 'koorukuroo'
-          git config --global user.email 'koorukuroo@example.com'
+          git config --global user.name 'wlsdk9803'
+          git config --global user.email 'wlsdk9803@naver.com'
           git add naver.txt
           git commit -m "Add naver.txt"
-          git push
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          branch: "main"
+          github_token: ${{ secrets.GH_TOKEN }}
